<?xml version="1.0"?>
<package format="2">
  <name>abel05_navigation</name>
  <version>0.0.1</version>
  <description>The abel05_navigation package</description>

  <maintainer email="jeff.gao@tonyrobotics.com">Jeff Gao</maintainer>
  <author email="jeff.gao@tonyrobotics.com">Jeff Gao</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
