<?xml version="1.0"?>
<package format="2">
  <name>trd_driver</name>
  <version>0.0.1</version>
  <description>The trd_driver package</description>

  <maintainer email="jeff.gao@tonyrobotics.com">Jeff Gao</maintainer>
  <author email="jeff.gao@tonyrobotics.com">Jeff Gao</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
